# news-digest-bot

./: .dockerignore  .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  QA_REPORT.md  docker-compose.yml  pyproject.toml  requirements.txt
.ai-factory/: ARCHITECTURE.md  PLAN.md
.ai-factory/patches/: 2026-03-20-10.00.md  2026-03-20-11.00.md
bot/: __main__.py  config.py
bot/clients/: __init__.py  cbr_client.py  moex_client.py  newsapi_client.py  rss_client.py
bot/handlers/: details.py  digest.py  news.py  rates.py  start.py  stocks.py  subscription.py
bot/middlewares/: throttling.py
bot/scheduler/: jobs.py
bot/services/: details_service.py  digest_service.py  news_service.py  rates_service.py  stocks_service.py
bot/utils/: formatting.py
