[project]
name = "news-digest-bot"
version = "1.0.0"
description = "Telegram bot for hourly news digest with currency rates, stock quotes, and news"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.15.0,<4",
    "aiohttp>=3.11.11,<4",
    "feedparser>=6.0.11,<7",
    "APScheduler>=3.10.4,<4",
    "python-dotenv>=1.0.1,<2",
    "pytz>=2024.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
